Fix background visibility

--- a/src/inc/themes/h/scss/_viewer.scss
+++ b/src/inc/themes/h/scss/_viewer.scss
@@ -109,3 +109,7 @@
 		}				
 	}
 } 
+
+.mkl_pc_bg + .mkl_pc_viewer {
+	background: transparent;
+}
